# community-extensions

./: CLAUDE.md  CMakeLists.txt  FIXME.md  README.md  TODO.md  crawler-example.sql  matsmart.sql  pushdown.sql  pushdown_test.sql  vcpkg.json  zoho-local.sql
extensions/cloudflare/: description.yml
extensions/http_request/: description.yml
extensions/sitemap/: description.yml
extensions/warc/: description.yml
rust_parser/: Cargo.toml
rust_parser/src/: extractors.rs  ffi.rs  lib.rs  robots.rs  sitemap.rs
rust_parser/src/extractors/: css_extractor.rs  js_extractor.rs  jsonld_extractor.rs  microdata_extractor.rs  mod.rs  opengraph_extractor.rs
src/: crawl_lateral_function.cpp  crawl_parser.cpp  crawl_table_function.cpp  crawler_extension.cpp  crawler_function.cpp  crawler_utils.cpp  http_client.cpp  hydration_extractor.cpp  js_variables_extractor.cpp  json_path_evaluator.cpp  jsonld_extractor.cpp  link_parser.cpp  opengraph_extractor.cpp  rust_ffi.cpp  sitemap_function.cpp  stream_into_function.cpp  stream_merge_function.cpp  structured_data.cpp
src/include/: crawl_parser.hpp  crawler_internal.hpp  crawler_utils.hpp  http_client.hpp  hydration_extractor.hpp  js_variables_extractor.hpp  json_path_evaluator.hpp  jsonld_extractor.hpp  link_parser.hpp  opengraph_extractor.hpp  pipeline_state.hpp  rust_ffi.hpp  sitemap_function.hpp  structured_data.hpp  yyjson_guard.hpp
test/sql/: crawl_invalid_url.test  htmlpath_extraction.test
