[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
# Using latest SWC versions for serde compatibility
swc_ecma_parser = "33"
swc_ecma_ast = "20"
swc_common = { version = "18", features = ["sourcemap"] }
# HTTP client for Rust-side crawling
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
# Simple blocking HTTP client (no tokio dependencies)
ureq = "3"
url = "2.5"
# Robots.txt and sitemap parsing
texting_robots = "0.2"  # robots.txt parser
quick-xml = "0.37"      # XML sitemap parser
# Readability - extract article content from HTML
readability = "0.3"

[profile.release]
lto = true
codegen-units = 1
